# margin-of-error

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements-lock.txt
.streamlit/: config.toml
config/: economics.yaml  model.yaml
data/: README.md
docs/: APP_GUIDE.md  PROJECT_EXPLAINER.md  assumptions.md  decisions.md
models/phase1/: baseline_lightgbm.joblib
models/phase2/: cqr_90.joblib
models/phase5/: feature_defaults.json
notebooks/: 00_eda.ipynb  01_baseline.ipynb  02_uncertainty.ipynb  03_causal.ipynb  03_economics.ipynb  04_causal.ipynb  05_backtest.ipynb
reports/: deck_outline.md  memo.md  phase1_metric_card.json  phase1_oof_residuals.csv  phase2_calibration.csv  phase2_metric_card.json  phase2_test_underwriting.csv  phase3_causal_effects.csv  phase3_metric_card.json  phase3_underwriting_comparison.csv  phase4_backtest_periods.csv  phase4_metric_card.json
src/margin_of_error/: __init__.py  config.py
src/margin_of_error/app/: __init__.py  artifacts.py  underwriting.py
src/margin_of_error/backtest/: __init__.py  walkforward.py
src/margin_of_error/causal/: __init__.py  dml.py
src/margin_of_error/data/: __init__.py  cleaning.py  dictionary.py  loaders.py  schemas.py  validate.py
src/margin_of_error/economics/: __init__.py  simulation.py  underwriter.py
src/margin_of_error/features/: __init__.py  engineering.py  missingness.py  preprocessing.py  registry.py
src/margin_of_error/models/: __init__.py  baseline.py  conformal.py  phase2.py
src/margin_of_error/viz/: __init__.py  charts.py
tests/: conftest.py  test_config.py  test_conformal.py  test_data.py  test_phase1.py  test_phase2.py  test_phase3.py  test_phase4.py  test_phase5.py  test_schemas.py
tests/support/: readline.py
